# voice_recognition

./: .gitignore  CMakeLists.txt  Dockerfile  Pipfile  README.md  package.xml  setup.py
data/: record_data.sh
data/models/1/: conv_labels.txt  desc.txt  graph.pb
data/models/2/: conv_labels.txt  desc.txt  graph.pb
data/models/3/: conv_labels.txt
data/models/arse/: conv_labels.txt  desc.txt  graph.pb
data/models/arse_100k/: desc.txt  graph.pb  train.txt
data/models/arse_220k/: desc.txt  graph.pb  train.txt
data/samples/: augment_samples.py  fetch_samples.sh  sort_samples.py
data/samples/background/todo/: Dronestøy.m4a  ascend støy.m4a  styø.m4a
launch/: main.launch
src/filter/: chain_filter.py  confidence_filter.py  filter.py
src/labeler/: freeze.sh  label_wav.py  train.sh  wanted_words.txt
src/labeler/tf/: freeze.py  input_data.py  train.py
src/publisher/: actions.py  publisher.py  traverser.py  tree.py
src/splitter/: splitter.py  window.py  worker.py
src/test/: hello.py
